[package]
name = "nvme-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
zerocopy = { version="0.7", features=["derive"] }
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio", branch = "main", default-features = false }
vfio-bindings = { git = "https://github.com/rust-vmm/vfio", branch = "main" }
vmm-sys-util = "0.11.0"
libc = "0.2"
